<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="24dp"
        android:text="@string/paired_outbound"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/outbound_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:text="@string/no_device"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/paired_inbound"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <fragment
        android:tag="inboundDevicesFragment"
        android:name="it.mb.whatshare.MainActivity$InboundDevicesList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout="@layout/inbound_devices_fragment" />

</LinearLayout>