<!--
 * Copyright 2013 Michele Bonazza <emmepuntobi@gmail.com> 
 *
 * This file is part of WhatsHare.
 * 
 * WhatsHare is free software: you can redistribute it and/or modify it under
 * the terms of the GNU General Public License as published by the Free Software
 * Foundation, either version 3 of the License, or (at your option) any later
 * version.
 * 
 * Foobar is distributed in the hope that it will be useful, but WITHOUT ANY
 * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
 * A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public License along with
 * WhatsHare. If not, see <http://www.gnu.org/licenses/>.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PairOutboundActivity" >

    <ImageView
        android:id="@+id/qr_code"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/inputCode"
        android:layout_below="@+id/qr_instructions"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/qr_desc" />

    <EditText
        android:id="@+id/inputCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submit_code"
        android:inputType="text"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/qr_input_hint" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/qr_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/new_outbound_instructions_first_time"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/submit_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/qr_input_submit"
        android:onClick="onSubmitPressed" />

</RelativeLayout>